--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $(function(){
   </div>
 
   <!-- jQuery -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.3.js"></script>
 
   <!-- Optional localStorage dependancy, for persistent column width storage -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/store.js/1.3.14/store.min.js"></script>
